err/mempamal.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/mempamal'...
Listing './lib/python3.5/site-packages/mempamal/datasets'...
Listing './lib/python3.5/site-packages/mempamal/examples'...
Listing './lib/python3.5/site-packages/mempamal/scripts'...
Compiling './lib/python3.5/site-packages/mempamal/scripts/inner_reducer.py'...
***   File "./lib/python3.5/site-packages/mempamal/scripts/inner_reducer.py", line 82
    print Y_test
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mempamal/scripts/mapper.py'...
***   File "./lib/python3.5/site-packages/mempamal/scripts/mapper.py", line 64
    print Y_test
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mempamal-0.1.5.egg-info'...
Listing './lib/python3.5/site-packages/numpy'...
Listing './lib/python3.5/site-packages/numpy/.libs'...
Listing './lib/python3.5/site-packages/numpy/compat'...
Listing './lib/python3.5/site-packages/numpy/core'...
Listing './lib/python3.5/site-packages/numpy/core/include'...
Listing './lib/python3.5/site-packages/numpy/core/include/numpy'...
Listing './lib/python3.5/site-packages/numpy/core/lib'...
Listing './lib/python3.5/site-packages/numpy/core/lib/npy-pkg-config'...
Listing './lib/python3.5/site-packages/numpy/core/tests'...
Listing './lib/python3.5/site-packages/numpy/core/tests/data'...
Listing './lib/python3.5/site-packages/numpy/distutils'...
Listing './lib/python3.5/site-packages/numpy/distutils/command'...
Listing './lib/python3.5/site-packages/numpy/distutils/fcompiler'...
Listing './lib/python3.5/site-packages/numpy/distutils/mingw'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests'...
Listing './lib/python3.5/site-packages/numpy/doc'...
Listing './lib/python3.5/site-packages/numpy/f2py'...
Listing './lib/python3.5/site-packages/numpy/f2py/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/array_from_pyobj'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/assumed_shape'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/common'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/kind'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/mixed'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/parameter'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/regression'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/size'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/string'...
Listing './lib/python3.5/site-packages/numpy/fft'...
Listing './lib/python3.5/site-packages/numpy/fft/tests'...
Listing './lib/python3.5/site-packages/numpy/lib'...
Listing './lib/python3.5/site-packages/numpy/lib/tests'...
Listing './lib/python3.5/site-packages/numpy/lib/tests/data'...
Listing './lib/python3.5/site-packages/numpy/linalg'...
Listing './lib/python3.5/site-packages/numpy/linalg/tests'...
Listing './lib/python3.5/site-packages/numpy/ma'...
Listing './lib/python3.5/site-packages/numpy/ma/tests'...
Listing './lib/python3.5/site-packages/numpy/matrixlib'...
Listing './lib/python3.5/site-packages/numpy/matrixlib/tests'...
Listing './lib/python3.5/site-packages/numpy/polynomial'...
Listing './lib/python3.5/site-packages/numpy/polynomial/tests'...
Listing './lib/python3.5/site-packages/numpy/random'...
Listing './lib/python3.5/site-packages/numpy/random/tests'...
Listing './lib/python3.5/site-packages/numpy/testing'...
Listing './lib/python3.5/site-packages/numpy/testing/nose_tools'...
Listing './lib/python3.5/site-packages/numpy/testing/tests'...
Listing './lib/python3.5/site-packages/numpy/tests'...
Listing './lib/python3.5/site-packages/numpy-1.14.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/scikit_learn-0.19.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sklearn'...
Listing './lib/python3.5/site-packages/sklearn/__check_build'...
Listing './lib/python3.5/site-packages/sklearn/_build_utils'...
Listing './lib/python3.5/site-packages/sklearn/cluster'...
Listing './lib/python3.5/site-packages/sklearn/cluster/tests'...
Listing './lib/python3.5/site-packages/sklearn/covariance'...
Listing './lib/python3.5/site-packages/sklearn/covariance/tests'...
Listing './lib/python3.5/site-packages/sklearn/cross_decomposition'...
Listing './lib/python3.5/site-packages/sklearn/cross_decomposition/tests'...
Listing './lib/python3.5/site-packages/sklearn/datasets'...
Listing './lib/python3.5/site-packages/sklearn/datasets/data'...
Listing './lib/python3.5/site-packages/sklearn/datasets/descr'...
Listing './lib/python3.5/site-packages/sklearn/datasets/images'...
Listing './lib/python3.5/site-packages/sklearn/datasets/tests'...
Listing './lib/python3.5/site-packages/sklearn/datasets/tests/data'...
Listing './lib/python3.5/site-packages/sklearn/decomposition'...
Listing './lib/python3.5/site-packages/sklearn/decomposition/tests'...
Listing './lib/python3.5/site-packages/sklearn/ensemble'...
Listing './lib/python3.5/site-packages/sklearn/ensemble/tests'...
Listing './lib/python3.5/site-packages/sklearn/externals'...
Listing './lib/python3.5/site-packages/sklearn/externals/joblib'...
Listing './lib/python3.5/site-packages/sklearn/feature_extraction'...
Listing './lib/python3.5/site-packages/sklearn/feature_extraction/tests'...
Listing './lib/python3.5/site-packages/sklearn/feature_selection'...
Listing './lib/python3.5/site-packages/sklearn/feature_selection/tests'...
Listing './lib/python3.5/site-packages/sklearn/gaussian_process'...
Listing './lib/python3.5/site-packages/sklearn/gaussian_process/tests'...
Listing './lib/python3.5/site-packages/sklearn/linear_model'...
Listing './lib/python3.5/site-packages/sklearn/linear_model/tests'...
Listing './lib/python3.5/site-packages/sklearn/manifold'...
Listing './lib/python3.5/site-packages/sklearn/manifold/tests'...
Listing './lib/python3.5/site-packages/sklearn/metrics'...
Listing './lib/python3.5/site-packages/sklearn/metrics/cluster'...
Listing './lib/python3.5/site-packages/sklearn/metrics/cluster/tests'...
Listing './lib/python3.5/site-packages/sklearn/metrics/tests'...
Listing './lib/python3.5/site-packages/sklearn/mixture'...
Listing './lib/python3.5/site-packages/sklearn/mixture/tests'...
Listing './lib/python3.5/site-packages/sklearn/model_selection'...
Listing './lib/python3.5/site-packages/sklearn/model_selection/tests'...
Listing './lib/python3.5/site-packages/sklearn/neighbors'...
Listing './lib/python3.5/site-packages/sklearn/neighbors/tests'...
Listing './lib/python3.5/site-packages/sklearn/neural_network'...
Listing './lib/python3.5/site-packages/sklearn/neural_network/tests'...
Listing './lib/python3.5/site-packages/sklearn/preprocessing'...
Listing './lib/python3.5/site-packages/sklearn/preprocessing/tests'...
Listing './lib/python3.5/site-packages/sklearn/semi_supervised'...
Listing './lib/python3.5/site-packages/sklearn/semi_supervised/tests'...
Listing './lib/python3.5/site-packages/sklearn/svm'...
Listing './lib/python3.5/site-packages/sklearn/svm/tests'...
Listing './lib/python3.5/site-packages/sklearn/tests'...
Listing './lib/python3.5/site-packages/sklearn/tree'...
Listing './lib/python3.5/site-packages/sklearn/tree/tests'...
Listing './lib/python3.5/site-packages/sklearn/utils'...
Listing './lib/python3.5/site-packages/sklearn/utils/sparsetools'...
Listing './lib/python3.5/site-packages/sklearn/utils/sparsetools/tests'...
Listing './lib/python3.5/site-packages/sklearn/utils/tests'...
Listing './share'...
Listing './share/python-wheels'...
